<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Create Login -->
    <com.rey.material.widget.ProgressView
     android:id="@+id/login_progress2"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:visibility="gone"
     android:layout_width="48dp"
     android:layout_height="48dp"
     app:v_styleId="@array/pv_circular_in_colors"/>

      <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical">

             <ScrollView
             android:id="@+id/login_form2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
                  <LinearLayout
                  android:id="@+id/email_login_form2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
                      <!-- Login  -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <AutoCompleteTextView
                               android:id="@+id/login"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_login"
                               android:inputType="text"
                               android:digits="@string/ChecksymbolLogin"
                               android:maxLines="1"
                               android:singleLine="true" />

                       </android.support.design.widget.TextInputLayout>


                       <!-- Name  -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <AutoCompleteTextView
                               android:id="@+id/name"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_name"
                               android:inputType="text"
                               android:digits="@string/ChecksymbolName"
                               android:maxLines="1"
                               android:singleLine="true" />

                       </android.support.design.widget.TextInputLayout>

                       <!-- Lastname  -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <AutoCompleteTextView
                               android:id="@+id/lastname"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_Lastname"
                               android:inputType="text"
                               android:digits="@string/ChecksymbolName"
                               android:maxLines="1"
                               android:singleLine="true" />

                       </android.support.design.widget.TextInputLayout>

                       <!-- E-mail  -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <AutoCompleteTextView
                               android:id="@+id/email2"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_email"
                               android:inputType="textEmailAddress"
                               android:digits="@string/ChecksymbolLogin"
                               android:maxLines="1"
                               android:singleLine="true" />

                       </android.support.design.widget.TextInputLayout>


                       <!-- Create Login  1 -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <EditText
                               android:id="@+id/password"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_password"
                               android:imeActionId="@+id/login"
                               android:imeActionLabel="@string/action_sign_in_short"
                               android:imeOptions="actionUnspecified"
                               android:inputType="textPassword"
                               android:digits="@string/ChecksymbolLogin"
                               android:maxLines="1"
                               android:singleLine="true" />
                       </android.support.design.widget.TextInputLayout>


                       <!-- Create Login  2 -->
                       <android.support.design.widget.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                               <EditText
                               android:id="@+id/password2"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:hint="@string/prompt_password2"
                               android:imeActionId="@+id/login"
                               android:imeActionLabel="@string/action_sign_in_short"
                               android:imeOptions="actionUnspecified"
                               android:inputType="textPassword"
                               android:digits="@string/ChecksymbolLogin"
                               android:maxLines="1"
                               android:singleLine="true" />
                       </android.support.design.widget.TextInputLayout>

                       <com.rey.material.widget.Button
                       android:id="@+id/email_create_acc_button2"
                       app:rd_enable="true"
                       app:v_styleId="@array/button_raise_wave"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:layout_marginTop="16dp"
                       android:text="Create account"
                       />


                  </LinearLayout>
             </ScrollView>
      </LinearLayout>


</RelativeLayout>