<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/contentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlogin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarlogin"
        app:title="@string/prompt_login"
        app:titleTextColor="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>



    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

        <!-- Create Login -->
        <com.rey.material.widget.ProgressView
        android:id="@+id/login_progress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:v_styleId="@array/pv_circular_in_colors"/>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                    <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:id="@+id/imageView"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginTop="@dimen/imagelayout_marginTop"
                    android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/label_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelName"
                        android:textSize="40sp"
                        android:layout_below="@+id/imageView"
                        android:layout_centerHorizontal="true"/>

                    <LinearLayout
                    android:id="@+id/email_login_form2"
                    android:layout_below="@+id/label_textView"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <!-- Login  -->
                        <android.support.design.widget.TextInputLayout
                        android:id="@+id/InputLayoutLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:counterMaxLength="20"
                        app:counterTextAppearance="@style/counterText"
                        app:counterOverflowTextAppearance="@style/counterOverride">

                            <EditText
                            android:id="@+id/loginx"
                            android:maxLength="@integer/etittext_maxlength"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:digits="@string/ChecksymbolLogin"
                            android:maxLines="1"
                            android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <!-- Password -->
                        <android.support.design.widget.TextInputLayout
                        android:id="@+id/InputLayoutPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:counterMaxLength="29"
                        app:counterTextAppearance="@style/counterText"
                        app:counterOverflowTextAppearance="@style/counterOverride">

                            <EditText
                            android:id="@+id/passwordx"
                            android:maxLength="@integer/passwordtext_maxlength"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:digits="@string/ChecksymbolLogin"
                            android:maxLines="1"
                            android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <com.rey.material.widget.Button
                        android:id="@+id/login_button"
                        app:rd_enable="true"
                        style="?android:textAppearanceSmall"
                        app:v_styleId="@array/button_raise_wave"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_button"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in_short"/>

                        <RelativeLayout
                        android:id="@+id/Relative"
                        android:layout_below="@+id/login_button"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                            <TextView
                            android:id="@+id/createAccount_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Create_account"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_centerHorizontal="true"/>
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>